# namelesslang

./: .gitignore  1065.bundle.js  1099.bundle.js  1134.bundle.js  1147.bundle.js  1156.bundle.js  1259.bundle.js  1448.bundle.js  1471.bundle.js  180.bundle.js  1886.bundle.js  1960.bundle.js  1961.bundle.js  2060.bundle.js  2075.bundle.js  2140.bundle.js  2240.bundle.js  2403.bundle.js  249.bundle.js  2571.bundle.js  2798.bundle.js  2814.bundle.js  2892.bundle.js  2911.bundle.js  2954.bundle.js  3036.bundle.js  3585.bundle.js  3632.bundle.js  3919.bundle.js  4028.bundle.js  4129.bundle.js  4368.bundle.js  4386.bundle.js  4407.bundle.js  4902.bundle.js  4912.bundle.js  4946.bundle.js  5062.bundle.js  525.bundle.js  5593.bundle.js  (+48 more)
.github/workflows/: gh-page.yml  release.yml
docs/: index.md
example/: main.nmlss
nameless/: Cargo.toml
nameless/src/: lib.rs  repl.rs  utils.rs
nameless/src/compiler/: code.rs  compiler.rs  mod.rs  symbol_table.rs  test.rs
nameless/src/evaluator/: builtin.rs  environment.rs  evaluator.rs  mod.rs  object.rs  test.rs
nameless/src/lexer/: lexer.rs  mod.rs  test.rs  token.rs
nameless/src/object/: builtin.rs  mod.rs  object.rs  types.rs
nameless/src/parser/: ast.rs  grammar.pest  mod.rs  parser.rs  test.rs
nameless/src/vm/: mod.rs  test.rs  vm.rs
playground/: .babelrc  .eslintrc.json  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
playground/public/: index.html
playground/src/: lib.rs
playground/ts/: Editor.tsx  grammar.ts  index.tsx
playground/ts/@types/: index.d.ts
playground/ts/Controls/: Controls.module.css  Controls.tsx
playground/ts/Editor/: Editor.module.css  Editor.tsx
playground/ts/components/app/: app.tsx  styles.css
playground/ts/components/controller/: controller.tsx  index.ts  styles.css  styles.module.css
playground/ts/components/editor/: editor.tsx  functions.ts  index.ts  styles.css
playground/ts/components/output/: index.ts  output.tsx  styles.css
src/: lexer.rs  main.rs  parser.rs  repl.rs  token.rs  utils.rs
src/evaluator/: builtin.rs  environment.rs  evaluator.rs  mod.rs  object.rs  test.rs
src/lexer/: lexer.rs  mod.rs  test.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs  test.rs
