[package]
name = "nameless"
version = "0.1.0"
authors = ["Ángel Afonso <angelafonso60@gmail.com>"]
edition = "2018"

[features]
default = ["repl"]

repl = ["clap", "rustyline"]

[dependencies]
clap = {version = "2.33", optional = true}
rustyline = {version = "7.1.0", optional = true}
pest = "2.0"
pest_derive = "2.0"

[[bin]]
name = "nameless"
path = "src/bin/main.rs"
required-features = ["repl"]
