[package]
name = "nameless"
version = "0.1.0"
authors = ["Ángel Afonso <angelafonso60@gmail.com>"]
edition = "2018"

[[bin]]
required-features = ["cli"]
name = "nameless"
path = "src/bin/main.rs"

[features]
cli = ["clap", "rustyline"]
default = ["cli"]

[dependencies]
clap = {version = "2.33", optional = true}
rustyline = {version = "9", optional = true}
pest = "2.1"
pest_derive = "2.1"

