# You must change these to your own details.
[package]
name = "playground"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["You <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
nameless = {path = "../nameless"}
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.22"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target.debug_assertions.dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
