# You must change these to your own details.
[package]
name = "playground"
description = "Nameless wasm playground"
version = "0.1.0"
authors = ["Ángel Afonso <angelafonso@gmail.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
nameless = {path = "../nameless"}
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
wee_alloc = "0.4.2"

[dependencies.web-sys]
version = "0.3.46"

# features = [
#   'Document',
#   'Element',
#   'HtmlElement',
#   'Node',
#   'Window',
# ]


[target.debug_assertions.dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
futures = "0.3.8"
wasm-bindgen-test = "0.2.45"
